// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visualizations -> Details -> Editor -> Column Editor Changes column alignment 1`] = `
Object {
  "alignContent": "right",
  "description": "",
  "displayAs": "number",
  "name": "amount",
  "title": "amount",
  "visible": true,
}
`;

exports[`Visualizations -> Details -> Editor -> Column Editor Changes column description 1`] = `
Object {
  "alignContent": "left",
  "description": "Current order status",
  "displayAs": "string",
  "name": "status",
  "title": "Status",
  "visible": true,
}
`;

exports[`Visualizations -> Details -> Editor -> Column Editor Changes column title 1`] = `
Object {
  "alignContent": "left",
  "description": "",
  "displayAs": "string",
  "name": "user_id",
  "title": "User ID",
  "visible": true,
}
`;

exports[`Visualizations -> Details -> Editor -> Column Editor Changes display type 1`] = `
Object {
  "alignContent": "left",
  "description": "",
  "displayAs": "string",
  "name": "created_at",
  "title": "Created At",
  "visible": true,
}
`;
